syntax = "proto3";
package comdex.auction.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "comdex/asset/v1beta1/pair.proto";

option go_package = "github.com/comdex-official/comdex/x/auction/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message CollateralAuction {
    uint64 id = 1 [
        (gogoproto.moretags) = "yaml:\"id\""
    ];

    uint64 locked_vault_id = 2 [
        (gogoproto.moretags) = "yaml:\"locked_vault_id\""
    ];
    cosmos.base.v1beta1.Coin auctioned_collateral = 3 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"auctioned_collateral\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin discount_quantity = 4 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"discount_quantity\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    uint64 active_bidding_id = 5 [
        (gogoproto.moretags) = "yaml:\"active_bidding_id\""
    ];
    string bidder = 6 [
        (gogoproto.moretags) = "yaml:\"owner\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.AccAddress"
    ];
    cosmos.base.v1beta1.Coin bid = 7 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"bid\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin min_bid = 8 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"min_bid\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin max_bid = 9 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"max_bid\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    google.protobuf.Timestamp end_time = 10 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"end_time\""
    ];
    comdex.asset.v1beta1.Pair pair = 11 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"pair\""
    ];
    repeated uint64 bidding_ids = 12 [
        (gogoproto.moretags) = "yaml:\"bidding_ids\""
    ];
  }

message DebtAuction {
    uint64 auction_id = 1 [
        (gogoproto.moretags) = "yaml:\"id\""
    ];
    cosmos.base.v1beta1.Coin auctioned_token = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"auctioned_token\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin expected_user_token = 3 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"expected_token\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin expected_minted_token = 4 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"expected_token\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    google.protobuf.Timestamp end_time = 5 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"end_time\""
    ];
    uint64 active_bidding_id = 6 [
        (gogoproto.moretags) = "yaml:\"active_bidding_id\""
    ];
    string bidder = 7 [
        (gogoproto.moretags) = "yaml:\"owner\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.AccAddress"
    ];
    cosmos.base.v1beta1.Coin current_bid_amount = 8 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"min_bid\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    uint64 auction_status = 9 [
        (gogoproto.moretags) = "yaml:\"auction_status\""
    ];
}