syntax = "proto3";
package comdex.collector.v1beta1;

import "gogoproto/gogo.proto";


// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/comdex-official/comdex/x/collector/types";

message CollectorData {
  string collected_stability_fee = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"collected_stability_fee\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  string collected_closing_fee = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"collected_closing_fee\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  string collected_opening_fee = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"collected_opening_fee\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  string liquidation_rewards_collected = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"liquidation_rewards_collected\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

}

message NetFeeCollectedData {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  repeated AssetIdToFeeCollected assetIdToFeeCollected = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"asset_id_to_fee_collected\""];
}

message AssetIdToFeeCollected {
  uint64 asset_id = 1 [(gogoproto.moretags) = "yaml:\"asset_id\""];
  string net_fees_collected = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"net_fees_collected\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

}
message AppIdToAssetCollectorMapping {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  repeated AssetIdCollectorMapping asset_collector = 2 [(gogoproto.moretags) = "yaml:\"asset_collector\"",
  (gogoproto.nullable) = false];
}

message AssetIdCollectorMapping {
  uint64 asset_id = 1 [(gogoproto.moretags) = "yaml:\"asset_id\""];
  CollectorData collector = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collector\""];

}

message CollectorLookupTable {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  uint64 collector_asset_id = 2 [(gogoproto.moretags) = "yaml:\"collector_asset_id\""];
  uint64 secondary_asset_id = 3 [(gogoproto.moretags) = "yaml:\"secondary_asset_id\""];
  uint64 surplus_threshold = 4 [
  (gogoproto.moretags) = "yaml:\"surplus_threshold\""];
  uint64 debt_threshold = 5 [
  (gogoproto.moretags) = "yaml:\"debt_threshold\""];
  string locker_saving_rate = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"locker_saving_rate\"",
  (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
  uint64 lot_size = 7 [
  (gogoproto.moretags) = "yaml:\"lot_size\""];
  string bid_factor = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags)   = "yaml:\"bid_factor\""
  ];
}

message CollectorLookup { 
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  repeated CollectorLookupTable asset_rate_info = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"asset_rate_info\""];
}

message AppToDenomsMapping {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  repeated uint64 asset_ids = 2 [(gogoproto.moretags) = "yaml:\"asset_ids\""];
}

/////////////////////////////////////////////////////////2222222222222


message HistoricalAuction {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  repeated AssetToAuctionMapping asset_to_auction = 2 [(gogoproto.moretags) = "yaml:\"asset_to_auction\""];
}

message AssetToAuctionMapping {
  uint64 auctionId = 1 [(gogoproto.moretags) = "yaml:\"auction_id\""];
  repeated string asset_denoms = 2 [(gogoproto.moretags) = "yaml:\"asset_denoms\""];
}

////////////////////////////////////////////////////////33333333333333

// key app id -> assets  traverse this one
message CollectorAuctionLookupTable {
  uint64 app_id = 1 [(gogoproto.moretags) = "yaml:\"app_id\""];
  repeated AssetIdToAuctionLookupTable assetIdToAuctionLookup = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"asset_id_to_auction_lookup\""];
}

message AssetIdToAuctionLookupTable {
  uint64 asset_id = 1 [(gogoproto.moretags) = "yaml:\"asset_id\""];
  bool is_surplus_auction = 2 [(gogoproto.moretags) = "yaml:\"is_surplus_auction\""];
  bool is_debt_auction = 3 [(gogoproto.moretags) = "yaml:\"is_debt_auction\""];
  bool is_auction_active = 4 [(gogoproto.moretags) = "yaml:\"is_auction_active\""];
  bool asset_out_oracle_price = 15 [ (gogoproto.moretags) = "yaml:\"asset_out_oracle_price\"" ];
  uint64 asset_out_price     = 16 [ 
    (gogoproto.moretags) = "yaml:\"asset_out_price\"" ];
}